Adicionado funcionalidade de pesquisar apenas se estiver logado

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -30,4 +30,18 @@ body {
   box-shadow: 4px 4px 4px 1px rgb(141, 141, 141);
 }
 
+input {
+  border: solid 1px #c1c1c1;
+  border-radius: 18px;
+  outline: none;
+  height: 30px;
+  display: flex;
+  flex: 100%;
+  padding-left: 30px;
+}
+
+input:invalid {
+  border: 1px solid red;
+}
+
 
