--- a/src/pages/LoginPage/styles.css
+++ b/src/pages/LoginPage/styles.css
@@ -4,6 +4,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #e9e9e9;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+main.container-login {
+    box-shadow: 4px 4px 4px 1px rgb(210, 210, 210);
 }
 
 .container-login input {
