--- a/src/pages/RegisterPage/styles.css
+++ b/src/pages/RegisterPage/styles.css
@@ -4,7 +4,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #e9e9e9;
+    padding: 20px;
+    border-radius: 10px;
 }
+
+main.container-register {
+    box-shadow: 4px 4px 4px 1px rgb(210, 210, 210);
+}
+
 .container-register input {
     margin-top: 5px;
     margin-bottom: 10px;
