--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -2,7 +2,11 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    padding: 4px;
-    margin: 4px;
+    padding: 8px;
     left: 0;
+    height: 30px;
+}
+
+.container-footer p {
+    margin: 0;
 }
