--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -4,18 +4,58 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     margin: auto;
-    width: 50%;
+    width: 100%;
     text-align: center;
+    padding: 0 20px;
+    position: fixed;
+    height: 50px;
+    top: 0;
+}
+
+.navbar-left, .navbar-right {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar-left {
+    left: 0;
+}
+
+.navbar-right {
+    right: 0;
+}
+
+.navbar-left .menu,
+.navbar-right .menu {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 0;
+    margin-top: 20px;
+}
+
+.navbar-left .menu li,
+.navbar-right .menu li {
+    padding: 0 10px;
+}
+
+.container-header h1 {
+    display: -webkit-inline-box;
 }
 
 .container-header.big h1 {
-    font-size: 3rem;
+    font-size: 1.5em;
+    margin: 0;
 }
 
 .container-header.big img {
-    width: 3rem;
+    width: 2.5em;
 }
 
 .container-header img {
@@ -25,11 +65,4 @@
 
 .container-header h1::first-letter {
     color: #8A24B2;
-}
-
-.container-login-link {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 10px;
 }
