--- a/src/components/Search/styles.css
+++ b/src/components/Search/styles.css
@@ -2,5 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 20%;
+}
+
+.container-search input {
+    width: 70vw;
+    max-width: 500px;
 }
