--- a/src/pages/LoginPage/styles.css
+++ b/src/pages/LoginPage/styles.css
@@ -1,15 +1,20 @@
+.root-login {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
 .container-login {
     display: flex;
-    position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #e9e9e9;
-    padding: 20px;
+    padding: 40pt;
     border-radius: 10px;
-}
-
-main.container-login {
+    max-width: 400px;
     box-shadow: 4px 4px 4px 1px rgb(210, 210, 210);
 }
 
