--- a/src/pages/PostsPage/styles.css
+++ b/src/pages/PostsPage/styles.css
@@ -1,7 +1,8 @@
-.container-search {
+.container-posts form {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     height: 100%;
+    padding: 20px;
 }
